select: made value required field, fixed spacing on select and passwordInput

--- a/input/src/components/PasswordInput/input.module.css
+++ b/input/src/components/PasswordInput/input.module.css
@@ -2,7 +2,6 @@
     font-weight: 700;
     font-size: 1rem;
     line-height: 120%;
-    letter-spacing: 0.05rem;
 }
 
 .input {
